--- a/pages/choice.html
+++ b/pages/choice.html
@@ -102,14 +102,14 @@ document.addEventListener("DOMContentLoaded", (event) => {
     footer = document.getElementById("footer");
     if(cols > 1) {
           al = document.createElement("a");
-          al.text = "show less columns";
+          al.text = "reduce number of images/row";
           al.href = document.location.href.replace("cols="+cols, "cols=" +(cols-1));
           footer.appendChild(al);
     }
-    footer.appendChild(document.createTextNode(" "));
+    footer.appendChild(document.createElement("br"));
     if(cols < locs.length) {
           am = document.createElement("a");
-          am.text = "show more columns";
+          am.text = "enlarge number of images/row";
           am.href = document.location.href.replace("cols="+cols, "cols=" +(cols+1));
           footer.appendChild(am);
     }
